Tue Apr 01 22:11:52 GMT 2014  Olly Betts <olly@survex.com>

	* matcher/localsubmatch.cc: Don't refetch the termfreq if we already
	  have it.

Sun Mar 30 22:54:22 GMT 2014  Anish Kanchan <anishgkanchan@gmail.com>

	* include/xapian/termgenerator.h: Make TermGenerator flags an
	  anonymous enum, and typedef TermGenerator::flags to int for backward
	  compatibility with existing user code which uses it.  (fixes #616)

Thu Mar 27 05:45:14 GMT 2014  Liu Chi <liuchi09@gmail.com>

	* include/xapian/stem.h,languages/Makefile.mk,
	  languages/earlyenglish.sbl,languages/stem.cc,tests/api_stem.cc:
	  Add an early english stemmer.

Wed Mar 19 02:42:00 GMT 2014  Olly Betts <olly@survex.com>

	* weight/weightinternal.cc: Fix comment typo.

Fri Mar 14 09:53:22 GMT 2014  Olly Betts <olly@survex.com>

	* HACKING: MacTeX seems to be the best option if using homebrew.

Fri Mar 07 23:17:43 GMT 2014  Olly Betts <olly@survex.com>

	* matcher/maxpostlist.cc: More fixes for --enable.log.

Fri Mar 07 23:01:45 GMT 2014  Olly Betts <olly@survex.com>

	* matcher/maxpostlist.cc: Fix compilation error with --enable-log on.
	  Reported by Anurag Soni.

Fri Mar 07 00:39:11 GMT 2014  Olly Betts <olly@survex.com>

	* HACKING: Fix typo and RST markup.

Fri Mar 07 00:21:16 GMT 2014  VcamX <vcamx3@gmail.com>

	* HACKING: Note packages to install from homebrew on Mac OS X.

Fri Mar 07 00:17:01 GMT 2014  VcamX <vcamx3@gmail.com>

	* backends/dbcheck.cc,common/pack.h: Fix warnings with clang 5.0.

Tue Mar 04 04:25:11 GMT 2014  Olly Betts <olly@survex.com>

	* api/queryinternal.cc,api/queryinternal.h: Only simplify OP_SYNONYM
	  with a single subquery if that subquery is a term or MatchAll.

Tue Mar 04 04:12:58 GMT 2014  Olly Betts <olly@survex.com>

	* tests/api_none.cc: Test OPs with a single MatchAll subquery.

Mon Mar 03 22:59:55 GMT 2014  Mayank Chaudhary <mayankchaudhary.iitr@gmail.com>

	* docs/Makefile.am,docs/bm25.rst,docs/intro_ir.rst: Convert equations